[UPDATE] added fontawesome and restyle titles

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/dc2c0498e8.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
 </head>
@@ -65,7 +65,7 @@
             <div class="container-sm margin-container padding-section">
                 <div class="row padding-section">
                     <div class="col-100 padding-section">
-                        <h1>Trova il piano bussiness che fa per te</h1>
+                        <h2>Trova il piano bussiness che fa per te</h2>
                     </div>
                 </div>
                 <div class="row padding-section">
@@ -79,7 +79,7 @@
                         <p class="center-text">Singolo</p>
                         <hr>
                         <div class="padding-col">  
-                            <h2 class="margin-col">Professional</h2>
+                            <h3 class="margin-col">Professional</h3>
                             <br>
                             <p><strong>&euro; 12.00</strong></p>
                             <p class="trasparent">/mese</p>
@@ -90,7 +90,7 @@
                                 <li>5 TB di sapzio archiviazione sicuro</li>
                                 <br>
                                 <li>Funzioni di poduttività premium e condivisione file semplice e sicura</li>
-                                <br> <br> <br> <br>
+                                <br> <br> 
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
                             <br>
@@ -110,7 +110,7 @@
                         <p class="center-text">Team</p>
                         <hr>
                         <div class="padding-col">
-                            <h2 class="margin-col">Advanced</h2>
+                            <h3 class="margin-col">Advanced</h3>
                             <br>
                             <p><strong>&euro; 18.00</strong></p>
                             <p class="trasparent">/utente/mese</p>
@@ -121,7 +121,7 @@
                                 <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
                                 <br>
                                 <li>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
-                                <br> <br> <br>
+                                <br> <br> 
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
                             <br>
@@ -147,7 +147,7 @@
                         <p class="center-text">Azienda</p>
                         <hr>
                         <div class="padding-col">
-                            <h2 class="margin-col">Enterprise</h2>
+                            <h3 class="margin-col">Enterprise</h3>
                             <br>
                             <p><strong>Contattaci</strong></p>
                             <p class="trasparent">-</p>
