[UPDATE] delete all br

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <div class="row">
             <div class="col-50">
                 <div class="content ">
-                    <ul class="align">
-                        <li><img src="img/logo-small.png" alt="LOGO"></li>
-                        <li>Perchè Dropbox</li>
-                        <li>Funzioni</li>
-                        <li>Piani e Prezzi</li>
+                    <ul class="align ">
+                        <li class="margin-top0"><img src="img/logo-small.png" alt="LOGO"></li>
+                        <li class="margin-top0">Perchè Dropbox</li>
+                        <li class="margin-top0">Funzioni</li>
+                        <li class="margin-top0">Piani e Prezzi</li>
                     </ul>
                 </div>
             </div>
             <div class="col-50 ">
                 <div class="content right ">
                     <ul class="align">
-                        <li>Supporto</li>
-                        <li>Contatta l'ufficio vendite</li>
-                        <li>Accedi</li>
-                        <li class="blu-button">Inizia</li>
+                        <li class="margin-top0">Supporto</li>
+                        <li class="margin-top0">Contatta l'ufficio vendite</li>
+                        <li class="margin-top0">Accedi</li>
+                        <li class="blu-button margin-top0">Inizia</li>
                     </ul>
                 </div>
             </div>
@@ -61,6 +61,7 @@
                 </div>
             </div>
         </section>
+        <!-- TRE COLONNE  -->
         <section>
             <div class="container-sm margin-container padding-section">
                 <div class="row padding-section">
@@ -80,28 +81,19 @@
                         <hr>
                         <div class="padding-col">  
                             <h3 class="margin-col">Professional</h3>
-                            <br>
                             <p><strong>&euro; 12.00</strong></p>
                             <p class="trasparent">/mese</p>
-                            <br> <br>
-                            <ul>
+                            <ul class="margin-col">
                                 <li>1 Utente</li>
-                                <br>
                                 <li>5 TB di sapzio archiviazione sicuro</li>
-                                <br>
                                 <li>Funzioni di poduttività premium e condivisione file semplice e sicura</li>
-                                <br> <br> 
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
-                            <br>
-                            <p>oppure <a href="">acquista ora</a></p>
-                            <br> <br>
-                            <div class="col-30"><hr></div>
-                            <br> <br>
+                            <p class="margin-col">oppure <a href="">acquista ora</a></p>
+                            <div class="col-30 margin-col"><hr></div>
                             <p><strong>Punti salienti del piano</strong></p>
                             <ul class="margin-col">
                                 <li>Invia file fino a 100 GB con Dropbox Transfer </li>
-                                <br>
                                 <li>Cartelle offline sui dispositivi mobili</li>
                             </ul>
                         </div>
@@ -111,69 +103,46 @@
                         <hr>
                         <div class="padding-col">
                             <h3 class="margin-col">Advanced</h3>
-                            <br>
                             <p><strong>&euro; 18.00</strong></p>
                             <p class="trasparent">/utente/mese</p>
-                            <br> <br>
-                            <ul>
+                            <ul class="margin-col">
                                 <li>3 o più Utenti</li>
-                                <br>
                                 <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
-                                <br>
                                 <li>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
-                                <br> <br> 
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
-                            <br>
-                            <p>oppure <a href="">acquista ora</a></p>
-                            <br> <br>
-                            <div class="col-30"><hr></div>
-                            <br> <br>
+                            <p class="margin-col">oppure <a href="">acquista ora</a></p>
+                            <div class="col-30 margin-col "><hr></div>
                             <p><strong>Punti salienti del piano</strong></p>
                             <ul class="margin-col">
                                 <li>Nessun limite di spazi per file</li>
-                                <br>
                                 <li>Cartelle offline sui dispositivi mobili</li>
-                                <br>
                                 <li>Risparmio del 50% rispetto alle iscrizioni singole</li>
-                                <br>
                                 <li>Possibilità di inserire nuovi membri del team</li>
-                                <br>
                                 <li>Gestione dei permessi in base al ruolo</li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-30 border ">
-                        <p class="center-text">Azienda</p>
+                        <p class="center-text ">Azienda</p>
                         <hr>
                         <div class="padding-col">
                             <h3 class="margin-col">Enterprise</h3>
-                            <br>
                             <p><strong>Contattaci</strong></p>
                             <p class="trasparent">-</p>
-                            <br> <br>
-                            <ul>
+                            <ul class="margin-col">
                                 <li>10 o più Utenti</li>
-                                <br>
                                 <li>Soluzioni personalizzati per la tua azienda</li>
-                                <br>
                                 <li>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
-                                <br> <br>
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
-                            <br>
-                            <p>oppure <a href="">acquista ora</a></p>
-                            <br> <br>
-                            <div class="col-30"><hr></div>
-                            <br> <br>
+                            <p class="margin-col">oppure <a href="">acquista ora</a></p>
+                            <div class="col-30 margin-col"><hr></div>
                             <p><strong>Punti salienti del piano</strong></p>
                             <ul class="margin-col">
                                 <li>Cartelle offline sui dispositivi mobili</li>
-                                <br>
                                 <li>Servizio assistenza 24/h</li>
-                                <br>
                                 <li>Possibilità di personalizzazione totale</li>
-                                <br>
                             </ul>
                         </div>
                     </div>
