--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Buisness è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <p class="blu-button margin-col">Inizia la tua prova gratuita</p>
                         <p class="margin-col">Annulla in qualsiasi momento</p>
+                        <div class="">
+                            <i class="fas fa-arrow-down arrow"></i>
+                        </div>
                     </div>
                     <div class="col-70">
                         <img class="img-jumbo" src="img/jumbo.png" alt="JUMBO">
@@ -77,24 +80,24 @@
                 </div>
                 <div class="row padding-section  space-bet">
                     <div class="col-30 border">
-                        <p class="center-text">Singolo</p>
+                        <p class="center-text"><i class="fa-solid fa-user fa-2xs"></i> Singolo</p>
                         <hr>
                         <div class="padding-col">  
                             <h3 class="margin-col">Professional</h3>
                             <p><strong>&euro; 12.00</strong></p>
                             <p class="trasparent">/mese</p>
                             <ul class="margin-col">
-                                <li>1 Utente</li>
-                                <li>5 TB di sapzio archiviazione sicuro</li>
-                                <li>Funzioni di poduttività premium e condivisione file semplice e sicura</li>
+                                <li><i class="fa-solid fa-user fa-2xs"></i> 1 Utente</li>
+                                <li><i class="fa-solid fa-folder fa-xs"></i> 5 TB di sapzio archiviazione sicuro</li>
+                                <li><i class="fa-solid fa-share-nodes fa-2sm"></i> Funzioni di poduttività premium e condivisione file semplice e sicura</li>
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
                             <p class="margin-col">oppure <a href="">acquista ora</a></p>
                             <div class="col-30 margin-col"><hr></div>
                             <p><strong>Punti salienti del piano</strong></p>
                             <ul class="margin-col">
-                                <li>Invia file fino a 100 GB con Dropbox Transfer </li>
-                                <li>Cartelle offline sui dispositivi mobili</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Invia file fino a 100 GB con Dropbox Transfer </li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Cartelle offline sui dispositivi mobili</li>
                             </ul>
                         </div>
                     </div>
@@ -107,19 +110,18 @@
                             <p class="trasparent">/utente/mese</p>
                             <ul class="margin-col">
                                 <li>3 o più Utenti</li>
-                                <li>Tutto lo spazio di cui ha bisogno il tuo team</li>
-                                <li>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
+                                <li><i class="fa-solid fa-folder fa-xs"></i> Tutto lo spazio di cui ha bisogno il tuo team</li>
+                                <li><i class="fa-solid fa-share-nodes fa-2sm"></i> Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</li>
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
                             <p class="margin-col">oppure <a href="">acquista ora</a></p>
                             <div class="col-30 margin-col "><hr></div>
                             <p><strong>Punti salienti del piano</strong></p>
                             <ul class="margin-col">
-                                <li>Nessun limite di spazi per file</li>
-                                <li>Cartelle offline sui dispositivi mobili</li>
-                                <li>Risparmio del 50% rispetto alle iscrizioni singole</li>
-                                <li>Possibilità di inserire nuovi membri del team</li>
-                                <li>Gestione dei permessi in base al ruolo</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Nessun limite di spazi per file</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Possibilità di inserire nuovi membri del team</li>
+                                <li> <i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Gestione dei permessi in base al ruolo</li>
                             </ul>
                         </div>
                     </div>
@@ -131,18 +133,18 @@
                             <p><strong>Contattaci</strong></p>
                             <p class="trasparent">-</p>
                             <ul class="margin-col">
-                                <li>10 o più Utenti</li>
-                                <li>Soluzioni personalizzati per la tua azienda</li>
-                                <li>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
+                                <li><i class="fa-solid fa-user fa-2xs"></i> 10 o più Utenti</li>
+                                <li><i class="fa-solid fa-folder fa-xs"></i> Soluzioni personalizzati per la tua azienda</li>
+                                <li><i class="fa-solid fa-share-nodes fa-2sm"></i> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</li>
                             </ul>
                             <div class="blu-button">Prova gratis per 30 giorni</div>
                             <p class="margin-col">oppure <a href="">acquista ora</a></p>
                             <div class="col-30 margin-col"><hr></div>
                             <p><strong>Punti salienti del piano</strong></p>
                             <ul class="margin-col">
-                                <li>Cartelle offline sui dispositivi mobili</li>
-                                <li>Servizio assistenza 24/h</li>
-                                <li>Possibilità di personalizzazione totale</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Cartelle offline sui dispositivi mobili</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Servizio assistenza 24/h</li>
+                                <li><i class="fa-solid fa-check fa-sm" style="color: #005eff;"></i> Possibilità di personalizzazione totale</li>
                             </ul>
                         </div>
                     </div>
