[UPDATE] complete a section and footer

--- a/index.html
+++ b/index.html
@@ -312,31 +312,94 @@
                     <div class="col-100 ">
                         <h2>Domande Frequanti</h2>
                         <hr class="margin-col">
-                        <div class="content ">
-                            <p class="margin-col ">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                            <i class="fa-solid fa-angle-down fa-2xs"></i>
+                        <div class="content space-around">
+                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-2xs  line-middle "></i>
                         </div>
                         <hr class="margin-col">
-                        <div class="content ">
-                            <p class="margin-col">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                            <i class="fa-solid fa-angle-down fa-2xs"></i>
+                        <div class="content space-around">
+                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-2xs line-middle"></i>
                         </div>
                         <hr class="margin-col">
-                        <div class="content">
-                            <p class="margin-col">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
-                            <i class="fa-solid fa-angle-down fa-2xs"></i>
+                        <div class="content space-around">
+                            <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                            <i class="fa-solid fa-angle-down fa-2xs line-middle"></i>
                         </div>
                         <hr class="margin-col">
                     </div>
                 </div>
         </section>
-        <section>
-            
-        </section>
     </main>
     <!-- FOOTER -->
     <footer>
-
+        <div class="container margin-container padding-section">
+            <div class="row content wrap padding-section">
+                <div class="col-20 content">
+                    <ul>
+                        <li><h3>Dropbox</h3></li>
+                        <br>
+                        <li>Applicazione dekstop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20 content">
+                    <ul>
+                        <li><h3>Prodotti</h3></li>
+                        <br>
+                        <li>Applicazione dekstop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20 content">
+                    <ul>
+                        <li><h3>Azienda</h3></li>
+                        <br>
+                        <li>Applicazione dekstop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20 content">
+                    <ul>
+                        <li><h3>Supporto</h3></li>
+                        <br>
+                        <li>Applicazione dekstop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div class="col-20 content">
+                    <ul>
+                        <li><h3>Security</h3></li>
+                        <br>
+                        <li>Applicazione dekstop</li>
+                        <li>Perchè Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row padding-section">
+                <div class="col-16 padding-section margin-col">
+                    <hr>
+                    <i class="fa-solid fa-earth-americas fa-2xs padding-section"></i>
+                    <span>Italiano</span>
+                    <i class="fa-solid fa-caret-up fa-2xs"></i>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
