[UPDATE] added font

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
         </section>
     </main>
     <!-- FOOTER -->
-    <footer>
-        <div class="container margin-container padding-section">
+    <footer class="margin-top">
+        <div class="container margin-container padding-section ">
             <div class="row content wrap padding-section">
                 <div class="col-20 content">
                     <ul>
