[UPDATE] added tags position

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                             <i class="fas fa-arrow-down arrow"></i>
                         </div>
                     </div>
-                    <div class="col-70">
-                        <img class="img-jumbo" src="img/jumbo.png" alt="JUMBO">
+                    <div class="col-70 position-img">
+                        <img class="jumbo-size" src="img/jumbo.png" alt="JUMBO">
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
                     <div class="col-100 border">
                         <div class="padding-col right">
                             <h3 class="margin-col inline ">Enterprise</h3>
-                            <span class="blu-button ">Contatta l'ufficio vendite</span>
+                            <span class="blu-button position-button">Contatta l'ufficio vendite</span>
                         </div>
                         <div class="padding-col">
                             <p><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
@@ -307,8 +307,8 @@
         </section>
         <!-- SEZIONE DOMANDE FREQUENTI -->
         <section>
-            <div class="container-sm margin-container padding-section">
-                <div class="row padding-section">
+            <div class="container-sm margin-container padding-section padding-bot">
+                <div class="row padding-section padding-bot">
                     <div class="col-100 ">
                         <h2>Domande Frequanti</h2>
                         <hr class="margin-col">
